# ome

./: .gitignore  3  Dockerfile  README.md  app.py  flim.tiff  pyproject.toml  requirements.txt  u.py  z.py
.arkitekt_next/: builds.yaml  deployments.yaml  manifest.yaml
.arkitekt_next/flavours/vanilla/: Dockerfile
.devcontainer/vanilla/: devcontainer.json
